--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-meta": "^2.4.0",
