--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.4.4",
     "lodash": "^4.17.21",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-meta": "^2.4.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
