v.0.41 - YaMetrika update + legacy code removed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@
         - HMAC_KEY=${HMAC_KEY}
         - CSRF_COOKIE_SECURE=${CSRF_COOKIE_SECURE}
         - SESSION_COOKIE_SECURE=${SESSION_COOKIE_SECURE}
+        - SMSRU_APIKEY=${SMSRU_APIKEY}
+        - SMSRU_CLIENT=${SMSRU_CLIENT}
       volumes:
         - ./:/app
         - ./media:/app/media
